# chess_opengl

./: CMakeLists.txt  README.md  camera.cpp  camera.h  control.cpp  control.h  main.cpp  navigationcontrols.cpp  object.cpp  object.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
models_dontuse/: King_Black.mtl  Queen_White.mtl
shaders/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
